src/test/resources/semantic/reject/elseStatementCharType.ul
void main() {
}

void foo() {
    char condition;

    if (condition) {
    } else {
    }
}
